--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,11 @@
 version: 2.1
-
+ 
 orbs:
-  android: circleci/android@2.5.0
-
+  android: circleci/android@0.2.1
+ 
 jobs:
   build:
-    executor:
-      name: android/android-machine
-      resource-class: large
-      tag: default
+    executor: android/android
     steps:
       - checkout
       - restore_cache:
@@ -27,7 +24,7 @@ jobs:
       - run:
           name: Run Build
           command: ./gradlew build
-      - store_artifacts:
+      - store_artifacts: 
           path: app/build/reports
           destination: reports
       - run:
@@ -35,12 +32,6 @@ jobs:
           command: ./gradlew lint test
       - store_test_results:
           path: app/build/test-results
-      - run:
-          name: Check Code Coverage
-          command: ./gradlew koverHtmlReport
-      - store_artifacts:
-          path: build/reports/kover/html
-          destination: kover
-      - store_artifacts:
+      - store_artifacts:  
           path: app/build/outputs/apk/debug/
           destination: artifact-file
